# xup

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: repo-layout.md  setup-guide.md
docs/superpowers/specs/: 2026-05-31-click-to-typer-design.md
src/xup/: cli.py  const.py  repo.py  utils.py
src/xup/commands/: copy.py
src/xup/commands/remote/: __init__.py  add.py  list.py  remove.py  rename.py  set_url.py
src/xup/commands/repo/: __init__.py  add.py  list.py  remove.py  rename.py  set_url.py
src/xup/utils/: __init__.py  copy.py  git.py  path.py  repo.py
tests/: conftest.py  test_cli.py  test_copy.py  test_remote.py  test_repo.py  test_utils.py
zed/: settings.json
