[project]
name = "xup"
version = "0.1.1"
description = "A config management and sync tool"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
xup = "xup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
