[project]
name = "xup"
version = "0.2.0"
description = "A config management and sync tool"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
xup = "xup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
